Added WebServer and form to update sensor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "string": "cpp"
     },
     "cmake.configureOnOpen": true
 }
