--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
+; upload_protocol = espota
+; upload_port = 192.168.3.16
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
