--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "chrono": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "system_error": "cpp"
     },
     "cmake.configureOnOpen": true
 }
