--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
-; upload_protocol = espota
-; upload_port = 192.168.3.16
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
@@ -18,3 +16,5 @@ monitor_speed = 115200
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.3
+	me-no-dev/ESPAsyncTCP@^1.2.2
+	me-no-dev/ESP Async WebServer@^1.2.3
